update project to support merge data